# prisma-ai-test-bench

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
config/: __init__.py  config.py
test_bench/: base_model.py  run_test_bench.py  text_generator.py  video_classifier.py
