[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "test_bench"

[project]
name = "prisma-ai-test-bench"
description = "Library to test AI capabilities of Prismas"
authors = [{name = "Luma Team", email = "dev@lumasystems.ai"}]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "av",
    "accelerate>=0.26.0",
    "litellm",
    "transformers",
    "torch",
    "Pillow",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "black",
    "flake8",
    "pre-commit",
    "isort"
]


[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
exclude = ["dist", "build", ".git", "__pycache__"]

[tool.isort]
profile = "black"
