[flake8]
# Flake8 configuration
max-line-length = 88
exclude =
    .git,
    __pycache__,
    build,
    dist,
    **/__init__.py
    env/
    venv/
    .venv/
    notebooks/
# Ignore specific warnings that conflict with Black
ignore = E203, E266, E501, W503
max-complexity = 10

[black]
# Black configuration
line-length = 88
target-version = ['py39']

[isort]
# isort configuration to align with Black's style
profile = black
line_length = 88
known_first_party = test_bench
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
# Pytest configuration
addopts = --maxfail=2 --disable-warnings --strict-markers
testpaths = tests
filterwarnings =
    error
    ignore::DeprecationWarning
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')

[mypy]
# Type checking with MyPy
files = test_bench, tests
ignore_missing_imports = True
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[metadata]
# Metadata for optional use by certain tools
description-file = README.md
